fix(spacing): letter spacing and nav element

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,9 +33,10 @@
     justify-content: center;
   }
   .main .title h1 {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     line-height: 0.5rem;
-    letter-spacing: 0.3px;
+    letter-spacing: -1px;
+    font-weight: 700;
   }
   .main .title h3 {
     font-size: 1rem;
